--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Dec 02 22:11:55 EST 2013
-app.grails.version=2.3.3
+#Mon Feb 24 16:30:32 EST 2014
+app.grails.version=2.3.6
 app.name=feedback-web
+app.servlet.version=3.0
 app.version=0.1
