--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Mon Feb 24 16:30:32 EST 2014
-app.grails.version=2.3.6
+#Fri Aug 29 08:42:30 EDT 2014
+app.grails.version=2.4.3
 app.name=feedback-web
 app.servlet.version=3.0
 app.version=0.1
